--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   url_launcher: ^5.7.10
   shared_preferences: ^0.5.12+4
   flutter_phoenix: ^0.1.0
+  fluttertoast: ^7.1.6
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
