--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,18 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1
+  flutter_launcher_icons: ^0.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  webview_flutter: ^1.0.7
-  url_launcher: ^5.7.10
-  shared_preferences: ^0.5.12+4
+  cupertino_icons: ^1.0.2
+  webview_flutter: ^2.0.2
+  url_launcher: ^6.0.2
+  shared_preferences: ^2.0.3
   flutter_phoenix: ^0.1.0
-  fluttertoast: ^7.1.6
-  http: ^0.12.2
+  fluttertoast: ^7.1.8
+  http: ^0.13.0
 
 dev_dependencies:
   flutter_test:
