Add pihole option to it

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,3 +89,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family:  Pihole
+      fonts:
+        - asset: assets/fonts/Pihole.ttf
+
