--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -30,11 +30,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   webview_flutter: ^2.0.2
-  url_launcher: ^6.0.2
-  shared_preferences: ^2.0.3
-  flutter_phoenix: ^0.1.0
-  fluttertoast: ^7.1.8
-  http: ^0.13.0
+  url_launcher: ^6.0.3
+  shared_preferences: ^2.0.5
+  flutter_phoenix: ^1.0.0
+  fluttertoast: ^8.0.3
+  http: ^0.13.1
 
 dev_dependencies:
   flutter_test:
